syntax = "proto3";

package AuthService;

option go_package = "./";

service Authentification{
    rpc Register(User) returns (AuthData){};
    rpc Login(User) returns (AuthData){};
    rpc UpdateTokens(RefreshToken) returns (AuthData){};
}

message RefreshToken{
    string refresh_token = 1;
}

message User{
    string login = 1;
    string password = 2;
}

message AuthData{
    string access_token = 1;
    string refresh_token = 2;
}